# ha-pricehawk

./: .coderabbit.yaml  .coverage  .gitignore  .gitleaks.toml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  ENGINEERING_CONSTITUTION.md  LICENSE  NOTICES.md  README.md  TODOS.md  codecov.yml  conftest.py  hacs.json  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  ty.toml  zensical.toml
.claude/commands/: fix-review.md  self-review.md  ship.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rate_update.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  meta.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: pr-review.prompt.md
.github/workflows/: actions-lint.yml  ci.yml  claude-assistant.yml  coderabbit-nitpicks.yml  docs-check.yml  dual-loop-review.yml  hacs.yml  hassfest.yml  lint.yml  pr-title-check.yml  python-ci.yml  security-scan.yml  stale.yml  validate.yaml  version-drift-guard.yml  wiki-update.yml
.local/state/gh/: device-id
.planning/: PHASE-3-ROADMAP.md  PHASE-3.2-to-3.5-PLAN.md
assets/: DESIGN.claude.md  dashboard-v3-apple.html  dashboard-v3-mockup.html
custom_components/pricehawk/: __init__.py  _observability.py  aemo_api.py  amber_calculator.py  backfill.py  config_flow.py  const.py  coordinator.py  csv_analyzer.py  dashboard.yaml  dashboard_config.py  data.py  diagnostics.py  explanation.py  helpers.py  localvolts_api.py  manifest.json  quality_scale.yaml  sensor.py  services.yaml  static_pricing.py  statistics.py  storage.py  strings.json  tariff_engine.py
custom_components/pricehawk/blueprints/automation/pricehawk/: cheapest_30min_window.yaml  cheapest_plan_alert.yaml  daily_7pm_summary.yaml  pause_ev_on_spike.yaml  wholesale_spike_alert.yaml
custom_components/pricehawk/cdr/: __init__.py  cdr_client.py  evaluator.py  history_replay.py  models.py  ranking.py  ranking_job.py  registry.py  rollup.py  streaming.py
custom_components/pricehawk/cdr/data/: cdr_endpoints.json  eme_refdata.json
custom_components/pricehawk/cdr/incentive_parsers/: __init__.py  agl.py  alinta.py  energyaustralia.py  engie.py  globird.py  origin.py  ovo.py  red.py
custom_components/pricehawk/cdr/incentive_parsers/common/: __init__.py  bonus_fit.py  ev_offpeak.py  free_window.py  ovo_interest.py  tiered_fit.py  vpp_rebate.py
custom_components/pricehawk/providers/: __init__.py  amber.py  base.py  cdr_plan.py  dynamic_wholesale_tariff.py  flow_power.py  globird.py  globird_cdr.py  localvolts.py  nemweb.py  openelectricity.py
custom_components/pricehawk/translations/: en.json
custom_components/pricehawk/wholesale/: __init__.py  protocol.py
custom_components/pricehawk/wholesale/amber/: __init__.py  calculator.py  provider.py
custom_components/pricehawk/wholesale/flow_power/: __init__.py  const.py  tariff_utils.py
custom_components/pricehawk/www/: dashboard.html  pricehawk-card.js  pricehawk-panel.js
docs/: AMBER_SURFACE.md  architecture.md  configuration.md  dashboard.md  development.md  phase-progress.md  sensors.md  services.md  troubleshooting.md  user-guide.md  web-interface-guidelines.md
docs/superpowers/specs/: 2026-04-06-globird-configurable-incentives-design.md
graphify-out/: GRAPH_REPORT.md  build_codemap.py  graph.json
graphify-out/wiki/: index.md
scripts/: CDR_INCENTIVE_CATALOG.md  CDR_SHAPE_CATALOG_PROMPT.md  PHASE_0_GROUND_TRUTH.md  cdr_evaluator_proto.py  cdr_pull_plans.py  gen_dst_fixtures.py  ha_pull_consumption.py  phase_0_verify.py  phase_1_parity.py  snapshot_legacy_engine.py
tests/: conftest.py  ha_fixtures.py  test_accuracy_validation.py  test_aemo_api.py  test_amber_calculator.py  test_amber_client.py  test_amber_unchanged.py  test_backfill.py  test_backfill_extended.py  test_blueprints.py  test_catalog_signatures.py  test_cdr_bonus_fit.py  test_cdr_client.py  test_cdr_ev_offpeak.py  test_cdr_evaluator.py  test_cdr_free_window.py  test_cdr_incentive_parsers_agl.py  test_cdr_incentive_parsers_phase_2_11_2.py  test_cdr_opt_in_dispatch.py  test_cdr_ovo_interest.py  test_cdr_ranking.py  test_cdr_registry.py  test_cdr_streaming.py  test_cdr_tiered_fit.py  test_cdr_vpp_rebate.py  test_ci_workflows.py  test_codex_p0_p1_fixes.py  test_codex_regression_fixes.py  test_comparison_snapshots.py  test_config_flow.py  test_config_flow_phase_3.py  test_coordinator.py  test_coordinator_booster.py  test_coordinator_cdr_flag.py  test_coordinator_helpers.py  test_coordinator_ranking.py  test_coverage_booster.py  test_csv_analyzer.py  test_dashboard_config.py  test_diagnostics.py  (+34 more)
tests/__snapshots__/: test_comparison_snapshots.ambr
tests/fixtures/: amber_sample.csv
tests/fixtures/legacy_engine_outputs/: PARITY_REPORT.md  legacy_boost_7d.json  legacy_zerohero_7d.json
tests/fixtures/phase0/: GATE_RESULTS.md  consumption_7d.json  consumption_dst_april_2026-04-05.json  consumption_dst_october_2026-10-04.json  plan_agl_AGL907738MRE6@EME.json  plan_c1_flexible_synthetic.json  plan_globird_GLO731031MR@VEC.json  plan_red-energy_RED552831MRE15@EME.json
