# PriceHawk project tooling configuration.
#
# PriceHawk is distributed via HACS, not PyPI — manifest.json:requirements
# remains the source of truth for runtime dependencies that HA installs
# at integration load. The [project] block below exists ONLY so that
# `uv sync` can resolve a lockfile and `[dependency-groups.dev]` can
# pull in the type-stubs + test harness that pyright needs to resolve
# `homeassistant`, `aiohttp`, etc. in the editor / CI sandbox.
#
# DO NOT add runtime deps under `[project].dependencies` — they belong
# in `custom_components/pricehawk/manifest.json` so HACS installs them
# into the HA venv. This file exists to pin ruff + pyright behaviour so
# agents (and humans) don't drift away from project intent. See
# `docs/development.md` for naming + reference-implementation
# conventions that complement these tooling rules.

[project]
name = "pricehawk"
version = "0.0.0"  # Source-of-truth version lives in manifest.json; this is a placeholder so uv has a valid [project] block.
description = "PriceHawk Home Assistant custom integration (HACS) — tooling-only project metadata."
requires-python = ">=3.13"
# Intentionally empty. Runtime deps are declared in
# custom_components/pricehawk/manifest.json:requirements so HACS installs
# them into the HA venv at integration load. Anything listed here would
# be invisible to HACS and would cause drift between the dev sandbox and
# the user's HA runtime.
dependencies = []

[dependency-groups]
# Dev-only deps so pyright can resolve imports for HA + test harness.
# `uv sync --group dev` installs these into .venv; CI installs them via
# the same group. Keep this list in sync with requirements.txt (the CI
# pip-cache manifest) — both files must agree, or pyright will pass
# locally and fail in CI (or vice versa).
dev = [
    "homeassistant",
    "aiohttp",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "hypothesis>=6.100.0",
    "pydantic",
    "openelectricity>=0.10.1,<0.11",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "custom_components/pricehawk/__pycache__",
    "tests/__pycache__",
]

[tool.ruff.lint]
# Pinned to the ruleset the existing codebase already passes cleanly.
# Selecting tighter rules without first paying down the resulting
# violations would just create noise. The commented "future-strict"
# block below is the target — adopt one rule at a time, paying down
# each in its own PR before turning it on for everyone.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (undefined names, unused imports)
]
ignore = [
    "E501",  # line length — already enforced by `line-length = 100`
]

# Future-strict target — enable one at a time, fix the consequent
# violations, then move the rule from this comment up into `select`:
#   "W"    pycodestyle warnings — clean today, ship next
#   "I"    isort (import ordering) — ~56 violations today, mostly auto-fixable
#   "B"    bugbear (likely bugs, mutable defaults) — ~80 violations today
#   "UP"   pyupgrade (modern Python idioms) — ~60 violations today
#   "S"    bandit security — ~30 violations today (mostly test-fixture passwords)
#   "BLE"  broad except — ~40 violations today (most are intentional boundary catches)
#   "RUF"  ruff-specific (mutable class defaults, etc.) — ~30 violations today
# Last counted 2026-05-23 via `ruff check --select <rule>`.

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S105",  # hardcoded "test password" strings are intentional in fixtures
    "S106",
    "S107",
]

[tool.pyright]
# Strict mode would flag every HA-import as "could not be resolved" in
# this sandbox (HA libs only installed inside the HA runtime). Use
# `basic` and suppress the import diagnostics that are noise in our
# tooling environment — actual type errors still surface.
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = ["custom_components", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
]
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
# Strict-typing intent (per global CLAUDE.md "no Any in Python"): the
# project bans untyped function signatures and implicit-Any returns.
# Pyright basic mode does not enforce these, but ruff's ANN ruleset
# can be enabled per-file if drift starts appearing in review.

[tool.pytest.ini_options]
# Keep the existing 1070-passing layout. Hypothesis is required for
# tests/test_tariff_engine_hypothesis.py; codex full-repo review
# 2026-05-23 flagged that bare pytest fails collection without it.
required_plugins = ["hypothesis"]
testpaths = ["tests"]
# `-p no:homeassistant` disables the pytest11 entrypoint registered by
# `pytest-homeassistant-custom-component` (PHCC). PHCC declares an
# autouse async fixture (`enable_event_loop_debug`) that pytest-asyncio
# refuses to inject into sync tests under modern pytest
# (PytestRemovedIn9Warning, hard error in pytest 9). The 1028+ sync
# tests in this repo follow the dual-mode stub-conftest strategy
# (D-P11-1) — they don't run inside the HA harness. PHCC stays installed
# (so pyright resolves `pytest_homeassistant_custom_component` imports
# in `tests/ha_fixtures.py` + future HA-harness tests), but its plugin
# is OFF by default. To run a future HA-harness test that needs it,
# override at the command line with `pytest -p homeassistant <path>`.
addopts = "-q --tb=short -p no:homeassistant"
