# PriceHawk project tooling configuration.
#
# PriceHawk is distributed via HACS, not PyPI — manifest.json:requirements
# remains the source of truth for runtime dependencies that HA installs
# at integration load. The [project] block below exists ONLY so that
# `uv sync` can resolve a lockfile and `[dependency-groups.dev]` can
# pull in the type-stubs + test harness that pyright needs to resolve
# `homeassistant`, `aiohttp`, etc. in the editor / CI sandbox.
#
# DO NOT add runtime deps under `[project].dependencies` — they belong
# in `custom_components/pricehawk/manifest.json` so HACS installs them
# into the HA venv. This file exists to pin ruff + pyright behaviour so
# agents (and humans) don't drift away from project intent. See
# `docs/development.md` for naming + reference-implementation
# conventions that complement these tooling rules.

[project]
name = "pricehawk"
# Mirror of custom_components/pricehawk/manifest.json:version. The
# Version Drift Guard CI step compares this literal string against the
# manifest, so they MUST be byte-identical (not just PEP 440 equivalent).
# uv/packaging normalises "1.6.0-beta.9" -> "1.6.0b9" internally without
# warning, so the non-canonical hyphenated form is safe here.
# Bump in lockstep with manifest.json on every release.
version = "1.6.0-beta.9"
description = "PriceHawk Home Assistant custom integration (HACS) — tooling-only project metadata."
# Minimum supported Python is 3.12 to match CI (.github/workflows/lint.yml +
# python-ci.yml both pin actions/setup-python to '3.12'). Tightening this to
# 3.13 would lock CI out of `uv sync` resolution. The ruff `target-version`
# + pyright `pythonVersion` below remain pinned to 3.13 — that controls the
# language-feature target for new code (HA Core 2026.x runs on 3.13), not
# the floor of what the dev sandbox is allowed to resolve against. Keep
# both: floor follows CI, target follows the deployment runtime.
requires-python = ">=3.12"
# Intentionally empty. Runtime deps are declared in
# custom_components/pricehawk/manifest.json:requirements so HACS installs
# them into the HA venv at integration load. Anything listed here would
# be invisible to HACS and would cause drift between the dev sandbox and
# the user's HA runtime.
dependencies = []

[dependency-groups]
# Single source of truth for the dev toolchain. CI (`.github/workflows/
# ci.yml`) runs `uv sync --group dev` then `uv run ruff/mypy/pytest`, and
# contributors get the identical toolchain via the same command. The old
# requirements.txt pip-cache manifest was removed — this group is the only
# dependency declaration now, so there is no longer a sync invariant to
# police between two files.
dev = [
    # Runtime stand-ins so pyright resolves HA + aiohttp imports in the
    # dev sandbox (HA core libs are only present inside the HA runtime).
    # Floors are required: bare ``"homeassistant"`` resolves to the v0.7.0
    # vanity package on PyPI, which has no Python-version constraint and
    # poisons `uv sync` on 3.12. The floor below tracks the lowest HA
    # release `pytest-homeassistant-custom-component` will accept on the
    # 3.12 CI runner; bump in lockstep with PHCC.
    "homeassistant>=2024.12",
    "aiohttp>=3.11",
    "pydantic>=2.0",
    # Lint + type + security toolchain.
    "ruff>=0.4.0",
    "ty>=0.0.40",
    # Test harness.
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "hypothesis>=6.100.0",
    # Explicit prerelease pin (narrow scope, replaces global
    # `[tool.uv] prerelease = "allow"`). `homeassistant>=2024.12` —
    # itself pulled transitively by PHCC on Python 3.12 — requires
    # `aiohasupervisor==0.2.2b5` (a pre-release; the 0.3.x stable
    # series requires HA Core >=2025.x, which requires Python >=3.13
    # and is out of reach of the 3.12 CI floor). Without an explicit
    # version specifier here, uv refuses to resolve the prerelease and
    # `uv sync --group dev --python 3.12` fails with
    # "pre-releases weren't enabled". Listing the exact version makes
    # the prerelease opt-in scoped to this single transitive instead
    # of the project-wide "allow everything pre" sledgehammer. Bump
    # in lockstep with the PHCC/`homeassistant` floor above when the
    # 3.12 CI floor moves; re-verify by deleting this line and running
    # `uv sync --group dev --python 3.12` — if it still resolves,
    # remove permanently.
    "aiohasupervisor==0.2.2b5",
]
# NOTE: ``openelectricity`` is intentionally NOT in [dependency-groups.dev].
# It is a HACS runtime-only dep (declared in custom_components/pricehawk/
# manifest.json:requirements) and pins itself to HA Core >=2025.x, which
# in turn requires Python >=3.13. Including it in dev would force the
# whole dev group up to 3.13 and break `uv sync --python 3.12` (CI's
# baseline). Pyright treats the missing import as a warning per
# `reportMissingImports = "warning"` below — acceptable. If you ever
# need it locally for editor resolution, install ad-hoc:
#   `uv pip install "openelectricity>=0.10.1,<0.11"` on a 3.13 venv.

# [tool.uv] prerelease = "allow" was removed (codex follow-up #2,
# 2026-05-27): the project-wide opt-in let ANY prerelease slip in for
# ANY dep, which is too permissive. Replaced by the explicit
# `aiohasupervisor==0.2.2b5` pin in `[dependency-groups.dev]` above —
# uv accepts a prerelease version specifier as an in-line opt-in for
# that one package only. Verified by `uv sync --group dev --python
# 3.12` continuing to resolve cleanly with the global setting removed.

[tool.ty.environment]
# ty resolves the real HA installed by pytest-homeassistant-custom-component
# in the uv venv (unlike the old mypy follow_imports=skip workaround). CI runs
# on 3.12 (the PHCC/HA floor); language target stays 3.13 for new code.
python-version = "3.12"

[tool.ty.src]
# Type-check the integration package only. Tests are exercised by pytest, not
# the type gate (they instantiate HA stubs that ty can't model meaningfully).
include = ["custom_components/pricehawk"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "custom_components/pricehawk/__pycache__",
    "tests/__pycache__",
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes (undefined names, unused imports)
    "ASYNC",   # flake8-async — blocking I/O in async paths
    "BLE",     # flake8-blind-except — bare `except Exception` w/o reraise/log
    "TRY",     # tryceratops — exception anti-patterns
    "B",       # flake8-bugbear — likely bugs, mutable defaults
    "S",       # flake8-bandit — security (replaces the standalone bandit dep)
    "C901",    # mccabe cyclomatic complexity
    "RUF006",  # asyncio.create_task without a saved reference
]
ignore = [
    "E501",    # line length — already enforced by `line-length = 100`
    "TRY003",  # raise-vanilla-args — flags every `raise Err("long msg")`;
               # HA idiom (ConfigEntryNotReady etc.) makes this pure noise.
]

[tool.ruff.lint.mccabe]
# Gate against NEW complexity regressions. Set at 25 (current ceiling — the
# tree passes today with zero refactor) rather than the eventual target of
# 12, because the 6 functions over 15 are all critical-logic paths (GloBird
# tariff `apply`, coordinator `_async_update_data` / `async_restore_state` /
# `_apply_options_to_state`) that must be refactored one-at-a-time with their
# own test focus — not inside a lint PR (constitution §13 no-regression).
# Ratchet 25 → 20 → 15 → 12 in dedicated complexity-paydown PRs.
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",     # tests use `assert` (S101) + hardcoded fixture creds (S105-107) by design
    "BLE",   # tests deliberately catch-all to assert on failure paths
]
"scripts/**/*.py" = [
    "S101",  # dev scripts use assert freely
    "S310",  # controlled-URL urllib in HA/CDR pull scripts
]

[tool.pyright]
# Strict mode would flag every HA-import as "could not be resolved" in
# this sandbox (HA libs only installed inside the HA runtime). Use
# `basic` and suppress the import diagnostics that are noise in our
# tooling environment — actual type errors still surface.
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = ["custom_components", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
]
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
# Strict-typing intent (per global CLAUDE.md "no Any in Python"): the
# project bans untyped function signatures and implicit-Any returns.
# Pyright basic mode does not enforce these, but ruff's ANN ruleset
# can be enabled per-file if drift starts appearing in review.

[tool.pytest.ini_options]
# Keep the existing 1070-passing layout. Hypothesis is required for
# tests/test_tariff_engine_hypothesis.py; codex full-repo review
# 2026-05-23 flagged that bare pytest fails collection without it.
required_plugins = ["hypothesis"]
testpaths = ["tests"]
# `-p no:homeassistant` disables the pytest11 entrypoint registered by
# `pytest-homeassistant-custom-component` (PHCC). PHCC declares an
# autouse async fixture (`enable_event_loop_debug`) that pytest-asyncio
# refuses to inject into sync tests under modern pytest
# (PytestRemovedIn9Warning, hard error in pytest 9). The 1028+ sync
# tests in this repo follow the dual-mode stub-conftest strategy
# (D-P11-1) — they don't run inside the HA harness. PHCC stays installed
# (so pyright resolves `pytest_homeassistant_custom_component` imports
# in `tests/ha_fixtures.py` + future HA-harness tests), but its plugin
# is OFF by default.
#
# To run an HA-harness test that needs the PHCC plugin, override the
# `-p no:homeassistant` setting from `addopts`. Two recipes that both
# empirically load PHCC (verified 2026-05-27 on pytest 8.3.4 +
# pytest-homeassistant-custom-component 0.13.205 + Python 3.12.6 —
# baseline plugins listing does NOT include homeassistant-custom-
# component, and both recipes below DO show it):
#
#   # Recipe A (recommended) — explicit `-p homeassistant` on the CLI
#   # cancels the `no:` from addopts. Pytest applies `addopts` first
#   # then the trailing CLI flags, and a later positive `-p NAME`
#   # overrides the earlier `-p no:NAME` in this pytest line:
#   #   uv run pytest -p homeassistant tests/test_ha_harness_smoke.py
#   # Empirical output: `plugins: homeassistant-custom-component-0.13.205, …`
#   # (i.e. PHCC IS loaded; Codex's assertion that `-p no:NAME` is
#   # one-way and irreversible was disproven by `--collect-only`).
#
#   # Recipe B (fallback) — wipe addopts entirely. PHCC then autoloads
#   # via its pytest11 entry point. Use only if a future pytest version
#   # changes `-p` precedence such that Recipe A regresses:
#   #   uv run pytest -o "addopts=-q --tb=short" tests/test_ha_harness_smoke.py
#
# Do NOT use `PYTEST_DISABLE_PLUGIN_AUTOLOAD=0` — that env var is
# reversed-logic (=1 disables autoload), so setting =0 has no effect
# and the `required_plugins = ["hypothesis"]` block fails collection.
addopts = "-q --tb=short -p no:homeassistant"
